[FIX] web_editor, website: ensure editor toolbar doesn't hide dropdowns
A colorpicker in an option positioned above the toolbar in a snippets
menu would be hidden by the toolbar because of the toolbar's z-index.

That z-index is only needed when the editor is in a modal.

The bug this commit fixes only arises when the toolbar is in a snippets
menu.

This applies the z-index only when there is a snippets menu in the page.
To accomplish that we need the "editor_has_snippets" class that the
website module applied to the body. For the sake of harmony within Odoo,
that class is now applied by snippets.editor so that no matter the
module, if there is a snippets bar, the class is on the body of its
document.

X-original-commit: b1aa9c6093cea918337d5600ff9b16b7dd80de23

--- a/addons/web_editor/static/src/scss/wysiwyg.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg.scss
@@ -34,7 +34,6 @@ $o-we-zindex: $o-we-overlay-zindex + 1 !default;
     background-color: $o-we-bg;
     color: $o-we-color;
     font-family: $o-we-font-family;
-    z-index: 1051; // Bootstrap sets .modal z-index at 1050. Ensure toolbar is visible in modals.
 
     &.noarrow::before {
         display: none;
@@ -128,6 +127,13 @@ $o-we-zindex: $o-we-overlay-zindex + 1 !default;
     .o_image_alt {
         @include o-text-overflow();
         max-width: 150px;
+    }
+}
+body:not(.editor_has_snippets) {
+    .oe-toolbar {
+        // Bootstrap sets .modal z-index at 1050. Ensure toolbar is visible in
+        // modals. Only apply this to the toolbar if it's not in a snippets menu.
+        z-index: 1051;
     }
 }
 @media only screen and (max-width: 767px) {
